Bug 335176 - screen can still be locked, even when disabled via session capability restrictions
Summary: screen can still be locked, even when disabled via session capability restric...
Status: RESOLVED FIXED
Alias: None
Product: ksmserver
Classification: Unmaintained
Component: lockscreen (other bugs)
Version First Reported In: unspecified
Platform: Debian stable Linux
: NOR major
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-22 09:05 UTC by Ronny Standtke
Modified: 2015-02-10 09:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ronny Standtke 2014-05-22 09:05:35 UTC
I disabled screen locking via the session capability restrictions with the following config snippet in kdeglobals:
-------------------
[KDE Action Restrictions][$i]
action/lock_screen=false
-------------------

Now the lock screen button is no longer visible in kickoff, but unfortunately, users are still able to lock the screen via the keyboard shortcut Ctrl+Alt+L.

Reproducible: Always

Actual Results:  
Users are still able to lock the screen via keyboard shortcut.

Expected Results:  
Screen locking is completely disabled, even via keyboard shortcut or any other mechanism.
Comment 1 Martin Flöser 2015-02-10 09:18:17 UTC
Git commit ae74ba191f53316e4b82213672ad8668cf8d8210 by Martin Gräßlin.
Committed on 10/02/2015 at 09:16.
Pushed by graesslin into branch 'Plasma/5.2'.

[screenlocker] Use KAuthorized::authorizeKAction for lock_screen

All other checks for lock_screen [1] use authorizeKAction, so that's
probably the one to use.
FIXED-IN: 5.2.1

[1] see http://lxr.kde.org/search?_filestring=&_string=lock_screen

M  +1    -1    ksmserver/screenlocker/ksldapp.cpp

http://commits.kde.org/plasma-workspace/ae74ba191f53316e4b82213672ad8668cf8d8210