[screenlocker] Use KAuthorized::authorizeKAction for lock_screen

All other checks for lock_screen [1] use authorizeKAction, so that's
probably the one to use.

BUG: 335176
FIXED-IN: 5.2.1

[1] see http://lxr.kde.org/search?_filestring=&_string=lock_screen